Made Haunted Bell functionnal

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -6,5 +6,7 @@
 	
 	"entity.meetyourfight.bellringer": "Bellringer",
 	
-	"itemGroup.meetyourfight": "Meet Your Fight"
+	"itemGroup.meetyourfight": "Meet Your Fight",
+	
+	"status.meetyourfight.boss_nearby": "Another boss is too close"
 }
