Added Trinket of Passage

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -1,6 +1,7 @@
 {
 	"item.meetyourfight.haunted_bell": "Haunted Bell",
 	"item.meetyourfight.phantoplasm": "Phantoplasm",
+	"item.meetyourfight.trinket_of_passage": "Trinket of Passage",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "Bellringer Spawn Egg",
 	
