--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -8,6 +8,13 @@
 	"item.meetyourfight.spectres_eye.desc": "Reveals nearby hostile mobs",
 	"item.meetyourfight.spectres_grasp": "Spectre's Grasp",
 	
+	"item.meetyourfight.devils_ante": "Devil's Ante",
+	"item.meetyourfight.devils_ante.desc": "Summons FILL THAT LATER",
+	"item.meetyourfight.slicers_dice": "Slicer's Dice",
+	"item.meetyourfight.slicers_dice.desc": "Attacks sometimes do more damage",
+	
+	"item.meetyourfight.desc.luck": "Affected by luck",
+	
 	"item.meetyourfight.bellringer_spawn_egg": "Bellringer Spawn Egg",
 	
 	"entity.meetyourfight.bellringer": "Bellringer",
