--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -15,6 +15,8 @@
 	"item.meetyourfight.slicers_dice.desc": "Attacks sometimes do more damage",
 	"item.meetyourfight.ace_of_iron": "Ace of Iron",
 	"item.meetyourfight.ace_of_iron.desc": "Sometimes negates incoming attacks",
+	"item.meetyourfight.cocktail_cutlass": "Cocktail Cutlass",
+	"item.meetyourfight.cocktail_cutlass.desc": "Attacks sometimes give potion effects",
 	
 	"item.meetyourfight.desc.luck": "Affected by luck",
 	
