Changed one tooltip

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -8,7 +8,7 @@
 	"item.meetyourfight.spectres_eye.desc": "Reveals nearby hostile mobs",
 	"item.meetyourfight.spectres_grasp": "Spectre's Grasp",
 	"item.meetyourfight.phantasmal_rifle": "Phantasmal Rifle",
-	"item.meetyourfight.phantasmal_rifle.desc": "Projectiles go through walls",
+	"item.meetyourfight.phantasmal_rifle.desc": "Projectiles go through blocks",
 	
 	"item.meetyourfight.devils_ante": "Devil's Ante",
 	"item.meetyourfight.devils_ante.desc": "Summons Dame Fortuna",
