Updated forge and brought balance on GWR compat

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -46,8 +46,5 @@
 	"advancements.meetyourfight.dame_fortuna_summon.title": "The Devil has its Price",
 	"advancements.meetyourfight.dame_fortuna_summon.description": "Get the Devil's Ante to summon Dame Fortuna",
 	"advancements.meetyourfight.dame_fortuna_kill.title": "Jackpot",
-	"advancements.meetyourfight.dame_fortuna_kill.description": "Defeat Dame Fortuna to get a Fortune's Favor",
-	
-	"_comment": "Forge issue #7372, here's a bandaid and hoping the issue won't get closed without fixing",
-	"generic.reachDistance": "Reach Distance"
+	"advancements.meetyourfight.dame_fortuna_kill.description": "Defeat Dame Fortuna to get a Fortune's Favor"
 }
