Reworded Passage's Toll description

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -3,7 +3,7 @@
 	"item.meetyourfight.haunted_bell.desc": "Summons Bellringer",
 	"item.meetyourfight.phantoplasm": "Phantoplasm",
 	"item.meetyourfight.passages_toll": "Passage's Toll",
-	"item.meetyourfight.passages_toll.desc": "Go up to 16 blocks through a wall",
+	"item.meetyourfight.passages_toll.desc": "Teleports you up to 16 blocks through any surface",
 	"item.meetyourfight.spectres_eye": "Spectre's Eye",
 	"item.meetyourfight.spectres_eye.desc": "Reveals nearby hostile mobs",
 	"item.meetyourfight.spectres_grasp": "Spectre's Grasp",
