--- a/src/main/resources/assets/meetyourfight/lang/fr_fr.json
+++ b/src/main/resources/assets/meetyourfight/lang/fr_fr.json
@@ -3,7 +3,7 @@
 	"item.meetyourfight.haunted_bell.desc": "Invoque Sonneur",
 	"item.meetyourfight.phantoplasm": "Phantoplasme",
 	"item.meetyourfight.passages_toll": "Tribut du passage",
-	"item.meetyourfight.passages_toll.desc": "Traverse jusqu'à 16 blocs à travers un mur",
+	"item.meetyourfight.passages_toll.desc": "Vous téléporte jusqu'à 16 blocs à travers une surface",
 	"item.meetyourfight.spectres_eye": "Oeuil du spectre",
 	"item.meetyourfight.spectres_eye.desc": "Dévoile les monstres hostiles proches",
 	"item.meetyourfight.spectres_grasp": "Poigne du spectre",
