Bone Raker and recipe for Fossil Bait

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -27,6 +27,7 @@
 	"item.meetyourfight.fossil_bait": "Fossil Bait",
 	"item.meetyourfight.fossil_bait.desc": "Summons Swampjaw",
 	"item.meetyourfight.mossy_tooth": "Mossy Tooth",
+	"item.meetyourfight.bone_raker": "Bone Raker",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "Bellringer Spawn Egg",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "Dame Fortuna Spawn Egg",
