--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -28,6 +28,8 @@
 	"item.meetyourfight.fossil_bait.desc": "Summons Swampjaw",
 	"item.meetyourfight.mossy_tooth": "Mossy Tooth",
 	"item.meetyourfight.bone_raker": "Bone Raker",
+	"item.meetyourfight.depth_star": "Depth Star",
+	"item.meetyourfight.depth_star.desc": "Can charge a short range shockwave",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "Bellringer Spawn Egg",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "Dame Fortuna Spawn Egg",
