--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -30,6 +30,7 @@
 	"item.meetyourfight.bone_raker": "Bone Raker",
 	"item.meetyourfight.depth_star": "Depth Star",
 	"item.meetyourfight.depth_star.desc": "Can charge a short range shockwave",
+	"item.meetyourfight.marshy_delight": "Marshy Delight",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "Bellringer Spawn Egg",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "Dame Fortuna Spawn Egg",
