Improved fortuna sounds slightly

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -49,9 +49,10 @@
 	"subtitles.meetyourfight.entity.bellringer.idle": "Bellringer wails",
 	"subtitles.meetyourfight.entity.bellringer.hurt": "Bellringer hurt",
 	"subtitles.meetyourfight.entity.bellringer.death": "Bellringer dies",
-	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna laughs",
+	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna breathes",
 	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "Dame Fortuna hurt",
 	"subtitles.meetyourfight.entity.dame_fortuna.death": "Dame Fortuna dies",
+	"subtitles.meetyourfight.entity.dame_fortuna.attack": "Dame Fortuna laughs",
 	"subtitles.meetyourfight.entity.dame_fortuna.shoot": "Dame Fortuna shoots",
 	"subtitles.meetyourfight.entity.swampjaw.idle": "Swampjaw growls",
 	"subtitles.meetyourfight.entity.swampjaw.hurt": "Swampjaw hurt",
