Custom sounds for fortuna

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -49,7 +49,7 @@
 	"subtitles.meetyourfight.entity.bellringer.idle": "Bellringer wails",
 	"subtitles.meetyourfight.entity.bellringer.hurt": "Bellringer hurt",
 	"subtitles.meetyourfight.entity.bellringer.death": "Bellringer dies",
-	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna breathes",
+	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna speaks",
 	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "Dame Fortuna hurt",
 	"subtitles.meetyourfight.entity.dame_fortuna.death": "Dame Fortuna dies",
 	"subtitles.meetyourfight.entity.dame_fortuna.attack": "Dame Fortuna laughs",
