--- a/src/main/resources/assets/meetyourfight/lang/fr_fr.json
+++ b/src/main/resources/assets/meetyourfight/lang/fr_fr.json
@@ -49,7 +49,7 @@
 	"subtitles.meetyourfight.entity.bellringer.idle": "Sonneur gémit",
 	"subtitles.meetyourfight.entity.bellringer.hurt": "Sonneur blessé",
 	"subtitles.meetyourfight.entity.bellringer.death": "Sonneur meurt",
-	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna respire",
+	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna parle",
 	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "Dame Fortuna blessée",
 	"subtitles.meetyourfight.entity.dame_fortuna.death": "Dame Fortuna meurt",
 	"subtitles.meetyourfight.entity.dame_fortuna.attack": "Dame Fortuna rit",
