--- a/src/main/resources/assets/meetyourfight/lang/fr_fr.json
+++ b/src/main/resources/assets/meetyourfight/lang/fr_fr.json
@@ -36,6 +36,8 @@
 	"item.meetyourfight.caged_heart.desc": "Réduit les dégâts qui dépassent 1/4 de la vie max",
 	"item.meetyourfight.marshy_delight": "Délice des marais",
 	
+	"item.meetyourfight.music_disc_magnum": "Disque",
+	
 	"item.meetyourfight.bellringer_spawn_egg": "Oeuf d'apparition de Sonneur",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "Oeuf d'apparition de Dame Fortuna",
 	"item.meetyourfight.swampjaw_spawn_egg": "Oeuf d'apparition de Gueule-des-marais",
