--- a/src/main/resources/assets/meetyourfight/lang/ko_kr.json
+++ b/src/main/resources/assets/meetyourfight/lang/ko_kr.json
@@ -1,6 +1,6 @@
 {
 	"item.meetyourfight.haunted_bell": "유령의 종",
-	"item.meetyourfight.haunted_bell.desc": "벨링거를 소환합니다.",
+	"item.meetyourfight.haunted_bell.desc": "벨링어를 소환합니다.",
 	"item.meetyourfight.phantoplasm": "환상체",
 	"item.meetyourfight.passages_toll": "출입의 종",
 	"item.meetyourfight.passages_toll.desc": "16블럭 이내의 표면으로 순간이동합니다.",
@@ -28,7 +28,7 @@
 	
 	"item.meetyourfight.fossil_bait": "화석 미끼",
 	"item.meetyourfight.fossil_bait.desc": "스왑조를 소환합니다.",
-	"item.meetyourfight.mossy_tooth": "이끼낀 이빨",
+	"item.meetyourfight.mossy_tooth": "이끼 낀 이빨",
 	"item.meetyourfight.bone_raker": "본 레이커",
 	"item.meetyourfight.depth_star": "뎁스 스타",
 	"item.meetyourfight.depth_star.desc": "충전하여 짧은 거리의 충격파를 발사합니다.",
@@ -36,22 +36,22 @@
 	"item.meetyourfight.caged_heart.desc": "최대 체력의 1/4를 초과하는 피해를 감소시킵니다.",
 	"item.meetyourfight.marshy_delight": "마쉬 딜라이트",
 	
-	"item.meetyourfight.music_disc_magnum": "음악 디스크",
+	"item.meetyourfight.music_disc_magnum": "음반",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
 	
-	"item.meetyourfight.bellringer_spawn_egg": "벨링거 생성 알",
+	"item.meetyourfight.bellringer_spawn_egg": "벨링어 생성 알",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "데임 포르투나 생성 알",
 	"item.meetyourfight.swampjaw_spawn_egg": "스왑조 생성 알",
 	
-	"entity.meetyourfight.bellringer": "벨링거",
+	"entity.meetyourfight.bellringer": "벨링어",
 	"entity.meetyourfight.dame_fortuna": "데임 포르투나",
 	"entity.meetyourfight.swampjaw": "스왑조",
 	
 	"status.meetyourfight.boss_nearby": "다른 보스가 너무 가까이에 있습니다.",
 	
-	"subtitles.meetyourfight.entity.bellringer.idle": "벨링거가 통곡함",
-	"subtitles.meetyourfight.entity.bellringer.hurt": "벨링거가 피해를 입음",
-	"subtitles.meetyourfight.entity.bellringer.death": "벨링거가 죽음",
+	"subtitles.meetyourfight.entity.bellringer.idle": "벨링어가 통곡함",
+	"subtitles.meetyourfight.entity.bellringer.hurt": "벨링어가 피해를 입음",
+	"subtitles.meetyourfight.entity.bellringer.death": "벨링어가 죽음",
 	"subtitles.meetyourfight.entity.dame_fortuna.idle": "데임 포르투나가 호흡함",
 	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "데임 포르투나가 피해를 입음",
 	"subtitles.meetyourfight.entity.dame_fortuna.death": "데임 포르투나가 죽음",
@@ -67,12 +67,12 @@
 	"subtitles.meetyourfight.item.damage_negated": "피해 무효화됨",
 	"subtitles.meetyourfight.item.damage_reduced": "피해 감소됨",
 	
-	"advancements.meetyourfight.root.title": "당신의 싸움을 맞이하세요",
-	"advancements.meetyourfight.root.description": "다가오는 도전에 대비하세요.",
+	"advancements.meetyourfight.root.title": "너의 전투를 목도하라",
+	"advancements.meetyourfight.root.description": "다가오는 도전을 대비하라.",
 	"advancements.meetyourfight.bellringer_summon.title": "종울 울려라",
-	"advancements.meetyourfight.bellringer_summon.description": "유령의 종을 사용하여 벨링거를 소환하세요.",
+	"advancements.meetyourfight.bellringer_summon.description": "유령의 종을 사용하여 벨링어를 소환하세요.",
 	"advancements.meetyourfight.bellringer_kill.title": "비물질적이고 잃어버린 힘",
-	"advancements.meetyourfight.bellringer_kill.description": "벨링거를 쓰러뜨리고 환상체를 얻으세요.",
+	"advancements.meetyourfight.bellringer_kill.description": "벨링어를 쓰러뜨리고 환상체를 얻으세요.",
 	"advancements.meetyourfight.dame_fortuna_summon.title": "악마는 대가를 요구한다",
 	"advancements.meetyourfight.dame_fortuna_summon.description": "악마의 칩을 사용하여 데임 포르투나를 소환하세요.",
 	"advancements.meetyourfight.dame_fortuna_kill.title": "잭팟",
@@ -80,7 +80,7 @@
 	"advancements.meetyourfight.swampjaw_summon.title": "진흙 아귀",
 	"advancements.meetyourfight.swampjaw_summon.description": "화석 미끼를 사용하여 스왑조를 소환하세요.",
 	"advancements.meetyourfight.swampjaw_kill.title": "진창의 챔피언",
-	"advancements.meetyourfight.swampjaw_kill.description": "스왑조를 쓰러뜨려 이끼낀 이빨을 얻으세요.",
+	"advancements.meetyourfight.swampjaw_kill.description": "스왑조를 쓰러뜨려 이끼 낀 이빨을 얻으세요.",
 	
 	"itemGroup.meetyourfight": "너의 전투를 목도하라"
 }
