--- a/src/main/resources/assets/meetyourfight/lang/ko_kr.json
+++ b/src/main/resources/assets/meetyourfight/lang/ko_kr.json
@@ -1,6 +1,6 @@
 {
 	"item.meetyourfight.haunted_bell": "유령의 종",
-	"item.meetyourfight.haunted_bell.desc": "벨링어를 소환합니다.",
+	"item.meetyourfight.haunted_bell.desc": "종을 울리는 자를 소환합니다.",
 	"item.meetyourfight.phantoplasm": "환상체",
 	"item.meetyourfight.passages_toll": "출입의 종",
 	"item.meetyourfight.passages_toll.desc": "16블럭 이내의 표면으로 순간이동합니다.",
@@ -12,14 +12,14 @@
 	"item.meetyourfight.aether_glazed_cupcake": "에테르 글레이즈드 컵케익",
 	
 	"item.meetyourfight.devils_ante": "악마의 칩",
-	"item.meetyourfight.devils_ante.desc": "데임 포르투나를 소환합니다.",
+	"item.meetyourfight.devils_ante.desc": "운명의 여신을 소환합니다.",
 	"item.meetyourfight.fortunes_favor": "행운의 은혜",
 	"item.meetyourfight.slicers_dice": "슬라이서의 주사위",
 	"item.meetyourfight.slicers_dice.desc": "일정 확률로 공격에 추가 피해가 생깁니다.",
 	"item.meetyourfight.ace_of_iron": "철의 에이스",
-	"item.meetyourfight.ace_of_iron.desc": "일정 확률로 들어온 피해를 무효화시킵니다.",
+	"item.meetyourfight.ace_of_iron.desc": "일정 확률로 받는 피해를 무효화합니다.",
 	"item.meetyourfight.cocktail_cutlass": "칵테일 커틀라스",
-	"item.meetyourfight.cocktail_cutlass.desc": "일정 확률로 공격이 물약 효과를 부여합니다.",
+	"item.meetyourfight.cocktail_cutlass.desc": "일정 확률로 공격이 무작위 물약 효과를 부여합니다.",
 	"item.meetyourfight.cocktail_shotgun": "예거샷",
 	"item.meetyourfight.cocktail_shotgun.desc": "일정 확률로 부정적인 효과의 투척용 물약을 발사합니다.",
 	"item.meetyourfight.velvet_fortune": "벨벳 포츈",
@@ -27,40 +27,40 @@
 	"item.meetyourfight.desc.luck": "행운에 영향을 받습니다.",
 	
 	"item.meetyourfight.fossil_bait": "화석 미끼",
-	"item.meetyourfight.fossil_bait.desc": "스왑조를 소환합니다.",
+	"item.meetyourfight.fossil_bait.desc": "늪상어를 소환합니다.",
 	"item.meetyourfight.mossy_tooth": "이끼 낀 이빨",
-	"item.meetyourfight.bone_raker": "본 레이커",
-	"item.meetyourfight.depth_star": "뎁스 스타",
+	"item.meetyourfight.bone_raker": "뼈갈퀴",
+	"item.meetyourfight.depth_star": "심연의 별",
 	"item.meetyourfight.depth_star.desc": "충전하여 짧은 거리의 충격파를 발사합니다.",
 	"item.meetyourfight.caged_heart": "갇혀있는 심장",
-	"item.meetyourfight.caged_heart.desc": "최대 체력의 1/4를 초과하는 피해를 감소시킵니다.",
+	"item.meetyourfight.caged_heart.desc": "최대 체력의 25%가 넘는 피해를 감소시켜 받습니다.",
 	"item.meetyourfight.marshy_delight": "마쉬 딜라이트",
 	
 	"item.meetyourfight.music_disc_magnum": "음반",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
 	
-	"item.meetyourfight.bellringer_spawn_egg": "벨링어 생성 알",
-	"item.meetyourfight.dame_fortuna_spawn_egg": "데임 포르투나 생성 알",
-	"item.meetyourfight.swampjaw_spawn_egg": "스왑조 생성 알",
+	"item.meetyourfight.bellringer_spawn_egg": "종을 울리는 자 생성 알",
+	"item.meetyourfight.dame_fortuna_spawn_egg": "운명의 여신 생성 알",
+	"item.meetyourfight.swampjaw_spawn_egg": "늪상어 생성 알",
 	
-	"entity.meetyourfight.bellringer": "벨링어",
-	"entity.meetyourfight.dame_fortuna": "데임 포르투나",
-	"entity.meetyourfight.swampjaw": "스왑조",
+	"entity.meetyourfight.bellringer": "종을 울리는 자",
+	"entity.meetyourfight.dame_fortuna": "운명의 여신",
+	"entity.meetyourfight.swampjaw": "늪상어",
 	
 	"status.meetyourfight.boss_nearby": "다른 보스가 너무 가까이에 있습니다.",
 	
-	"subtitles.meetyourfight.entity.bellringer.idle": "벨링어가 통곡함",
-	"subtitles.meetyourfight.entity.bellringer.hurt": "벨링어가 피해를 입음",
-	"subtitles.meetyourfight.entity.bellringer.death": "벨링어가 죽음",
-	"subtitles.meetyourfight.entity.dame_fortuna.idle": "데임 포르투나가 호흡함",
-	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "데임 포르투나가 피해를 입음",
-	"subtitles.meetyourfight.entity.dame_fortuna.death": "데임 포르투나가 죽음",
-	"subtitles.meetyourfight.entity.dame_fortuna.attack": "데임 포르투나가 웃음",
-	"subtitles.meetyourfight.entity.dame_fortuna.shoot": "데임 포르투나가 무언가를 발사함",
-	"subtitles.meetyourfight.entity.swampjaw.idle": "스왑조가 으르렁거림",
-	"subtitles.meetyourfight.entity.swampjaw.hurt": "스왑조가 피해를 입음",
-	"subtitles.meetyourfight.entity.swampjaw.death": "스왑조가 죽음",
-	"subtitles.meetyourfight.entity.swampjaw.charge": "스왑조가 폭탄을 투하함",
+	"subtitles.meetyourfight.entity.bellringer.idle": "종을 울리는 자가 통곡함",
+	"subtitles.meetyourfight.entity.bellringer.hurt": "종을 울리는 자가 피해를 입음",
+	"subtitles.meetyourfight.entity.bellringer.death": "종을 울리는 자가 죽음",
+	"subtitles.meetyourfight.entity.dame_fortuna.idle": "운명의 여신가 호흡함",
+	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "운명의 여신가 피해를 입음",
+	"subtitles.meetyourfight.entity.dame_fortuna.death": "운명의 여신가 죽음",
+	"subtitles.meetyourfight.entity.dame_fortuna.attack": "운명의 여신가 웃음",
+	"subtitles.meetyourfight.entity.dame_fortuna.shoot": "운명의 여신가 무언가를 발사함",
+	"subtitles.meetyourfight.entity.swampjaw.idle": "늪상어가 으르렁거림",
+	"subtitles.meetyourfight.entity.swampjaw.hurt": "늪상어가 피해를 입음",
+	"subtitles.meetyourfight.entity.swampjaw.death": "늪상어가 죽음",
+	"subtitles.meetyourfight.entity.swampjaw.charge": "늪상어가 폭탄을 투하함",
 	"subtitles.meetyourfight.entity.swampjaw.bomb": "폭탄이 폭발함",
 	
 	"subtitles.meetyourfight.item.bonus_damage": "피해 증폭됨",
@@ -70,17 +70,17 @@
 	"advancements.meetyourfight.root.title": "너의 전투를 목도하라",
 	"advancements.meetyourfight.root.description": "다가오는 도전을 대비하라.",
 	"advancements.meetyourfight.bellringer_summon.title": "종울 울려라",
-	"advancements.meetyourfight.bellringer_summon.description": "유령의 종을 사용하여 벨링어를 소환하세요.",
+	"advancements.meetyourfight.bellringer_summon.description": "유령의 종을 사용하여 종을 울리는 자를 소환하세요.",
 	"advancements.meetyourfight.bellringer_kill.title": "비물질적이고 잃어버린 힘",
-	"advancements.meetyourfight.bellringer_kill.description": "벨링어를 쓰러뜨리고 환상체를 얻으세요.",
+	"advancements.meetyourfight.bellringer_kill.description": "종을 울리는 자를 쓰러뜨리고 환상체를 얻으세요.",
 	"advancements.meetyourfight.dame_fortuna_summon.title": "악마는 대가를 요구한다",
-	"advancements.meetyourfight.dame_fortuna_summon.description": "악마의 칩을 사용하여 데임 포르투나를 소환하세요.",
+	"advancements.meetyourfight.dame_fortuna_summon.description": "악마의 칩을 사용하여 운명의 여신를 소환하세요.",
 	"advancements.meetyourfight.dame_fortuna_kill.title": "잭팟",
-	"advancements.meetyourfight.dame_fortuna_kill.description": "데임 포르투나를 쓰러뜨려 행운의 은혜를 얻으세요.",
+	"advancements.meetyourfight.dame_fortuna_kill.description": "운명의 여신를 쓰러뜨려 행운의 은혜를 얻으세요.",
 	"advancements.meetyourfight.swampjaw_summon.title": "진흙 아귀",
-	"advancements.meetyourfight.swampjaw_summon.description": "화석 미끼를 사용하여 스왑조를 소환하세요.",
+	"advancements.meetyourfight.swampjaw_summon.description": "화석 미끼를 사용하여 늪상어를 소환하세요.",
 	"advancements.meetyourfight.swampjaw_kill.title": "진창의 챔피언",
-	"advancements.meetyourfight.swampjaw_kill.description": "스왑조를 쓰러뜨려 이끼 낀 이빨을 얻으세요.",
+	"advancements.meetyourfight.swampjaw_kill.description": "늪상어를 쓰러뜨려 이끼 낀 이빨을 얻으세요.",
 	
 	"itemGroup.meetyourfight": "너의 전투를 목도하라"
 }
