Sword from rosalyne drops

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -39,6 +39,7 @@
 	"item.meetyourfight.dusk_key": "Dusk Key",
 	"item.meetyourfight.dusk_key.desc": "Summons Rosalyne, Blade of Dusk",
 	"item.meetyourfight.violet_bloom": "Violet Bloom",
+	"item.meetyourfight.twilights_thorn": "Twilight's Thorn",
 	
 	"item.meetyourfight.music_disc_magnum": "Music Disc",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
