--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -40,6 +40,8 @@
 	"item.meetyourfight.dusk_key.desc": "Summons Rosalyne, Blade of Dusk",
 	"item.meetyourfight.violet_bloom": "Violet Bloom",
 	"item.meetyourfight.twilights_thorn": "Twilight's Thorn",
+	"item.meetyourfight.wilted_ideals": "Wilted Ideals",
+	"item.meetyourfight.wilted_ideals.desc": "Increases all damage dealt",
 	
 	"item.meetyourfight.music_disc_magnum": "Music Disc",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
