--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -42,6 +42,8 @@
 	"item.meetyourfight.twilights_thorn": "Twilight's Thorn",
 	"item.meetyourfight.wilted_ideals": "Wilted Ideals",
 	"item.meetyourfight.wilted_ideals.desc": "Increases all damage dealt",
+	"item.meetyourfight.tomb_planter": "Tomb Planter",
+	"item.meetyourfight.tomb_planter.desc": "Fertilizes where you slain grounded mobs",
 	
 	"item.meetyourfight.music_disc_magnum": "Music Disc",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
