rosalyne song + lowered music volume + fixed glow texture

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -49,6 +49,8 @@
 	
 	"item.meetyourfight.music_disc_magnum": "Music Disc",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
+	"item.meetyourfight.music_disc_frogpunch": "Music Disc",
+	"item.meetyourfight.music_disc_frogpunch.desc": "Guifrog - Frog Punch",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "Bellringer Spawn Egg",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "Dame Fortuna Spawn Egg",
