rosalyne food and fixed twilight thorn damage

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -46,6 +46,7 @@
 	"item.meetyourfight.blossoming_mind.desc": "Increases experience from mobs",
 	"item.meetyourfight.tomb_planter": "Tomb Planter",
 	"item.meetyourfight.tomb_planter.desc": "Fertilizes where you slain grounded mobs",
+	"item.meetyourfight.petal_cream": "Petal Cream",
 	
 	"item.meetyourfight.music_disc_magnum": "Music Disc",
 	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
