Proper subtitles for rosalyne

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -82,6 +82,14 @@
 	"subtitles.meetyourfight.entity.rosalyne.hurt": "Rosalyne hurt",
 	"subtitles.meetyourfight.entity.rosalyne.death": "Rosalyne dies",
 	"subtitles.meetyourfight.entity.rosalyne.crack": "Rosalyne cracks",
+	"subtitles.meetyourfight.entity.rosalyne.swing": "Rosalyne swings",
+	"subtitles.meetyourfight.entity.rosalyne.swing.prepare": "Rosalyne prepares to swing",
+	"subtitles.meetyourfight.entity.rosespirit.idle": "Rose Spirit shrieks",
+	"subtitles.meetyourfight.entity.rosespirit.hurt": "Rose Spirit hurt",
+	"subtitles.meetyourfight.entity.rosespirit.hurt.big": "Rose Spirit screams",
+	"subtitles.meetyourfight.entity.rosespirit.death": "Rose Spirit dies",
+	"subtitles.meetyourfight.entity.rosespirit.warn": "Rose Spirit prepares to shoot",
+	"subtitles.meetyourfight.entity.rosespirit.shoot": "Rose Spirit shoots",
 	
 	"subtitles.meetyourfight.item.bonus_damage": "Damage amplified",
 	"subtitles.meetyourfight.item.damage_negated": "Damage negated",
